--- a/ControlBlockchain/ControlBlockchain/ControlBlockchain.csproj
+++ b/ControlBlockchain/ControlBlockchain/ControlBlockchain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DiffPlex" Version="1.7.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
